// Jest Snapshot v1, https://goo.gl/fbAQLP

exports['Container should render properly 1'] = '
<div
  className="container"
>
  <p>
    Children
  </p>
</div>
';

exports['Container should render properly with no props 1'] = '
<div
  className="container"
/>
';
